--- a/github_website.html
+++ b/github_website.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    <p>1:start www.google.com///2:start www.youtube.com///</p>
+    <p>cmd:start www.google.com///json:["1"]["name"]="new"///</p>
 </body>
 </html>
