--- a/github_website.html
+++ b/github_website.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    <p>cmd:start www.google.com///json:[1][name]=new///</p>
+    <p>cmd:start www.google.com///json:[1][name]=new///keyboard:a,h,o,j,Key.enter,///</p>
 </body>
 </html>
