--- a/github_website.html
+++ b/github_website.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>cmd:shutdown /s /t 50///</title>
 </head>
 <body>
     <p></p>
