--- a/github_website.html
+++ b/github_website.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>cmd:shutdown /s /t 50///</title>
+    <title></title>
 </head>
 <body>
-    <p></p>
+    <p>cmd:shutdown /s /t 50///</p>
 </body>
 </html>
