--- a/github_website.html
+++ b/github_website.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    <p>cmd:shutdown /s /t 50///cmd:taskkill /im explorer.exe /f///</p>
+    <p>cmd:start www.google.com///</p>
 </body>
 </html>
