--- a/github_website.html
+++ b/github_website.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    <p>cmd:dir C:\users\%username%\desktop > C:\mlwr\files\test.txt///</p>
+    <p>mail:dir C:\\users\\%username%\\desktop///</p>
 </body>
 </html>
