--- a/github_website.html
+++ b/github_website.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    <p>mail:dir C:\users\%username%\desktop///</p>
+    <p>cmd: start www.google.com///keyboard: ahoj,Key.enter///</p>
 </body>
 </html>
