--- a/github_website.html
+++ b/github_website.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <p>cmd: start www.google.com///</p>
+    <p>cmd: start www.google.com///keyboard:a,h,o,j,///</p>
     <a href="1.jpg">fotka</a>
 </body>
 </html>
