--- a/github_website.html
+++ b/github_website.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <p>cmd: start www.google.com///keyboard:a,h,o,j,///</p>
-    <a href="1.jpg">fotka</a>
+    <a href="1.png">fotka</a>
 </body>
 </html>
