--- a/github_website.html
+++ b/github_website.html
@@ -7,5 +7,6 @@
 <body>
     <p>cmd: start www.google.com///keyboard:a,h,o,j,///</p>
     <a href="1.png">fotka</a>
+    <a href="2.mp3">zvuk</a>
 </body>
 </html>
